# CoAP

./: CMakeLists.txt  README.md
base/: CMakeLists.txt  CheckCompositeFtor.cpp  CheckCompositeFtor.hpp  CheckExpiryTimerFtor.cpp  (+6 more)
test/c++17/: CMakeLists.txt  CMakePresets.json
test/c++17/AbstractBasePimpl/: CMakeLists.txt  Label.cpp  Label.hpp  LabelImplBase.hpp  LabelOCHImpl.cpp  LabelOCHImpl.hpp  LabelOTNImpl.cpp  LabelOTNImpl.hpp  Main.cpp
test/c++17/PlainAbstractBase/: LabelIF.hpp  LabelOCHImpl.cpp  LabelOCHImpl.hpp  LabelOTNImpl.cpp  LabelOTNImpl.hpp  Main.cpp
test/c++17/TypeErasure/: Label.hpp  LabelConcept.hpp  LabelImpl.cpp  LabelImpl.hpp  LabelModel.hpp  LabelOCH.cpp  LabelOCH.hpp  LabelOTN.cpp  LabelOTN.hpp  LabelTypes.hpp  Main.cpp
test/c++17/polymorphism/: Inheritance-c++17.cpp
uri/: CMakeLists.txt  IPv4AddressParser.cpp  IPv4AddressParser.hpp  IPv4AddressParser_def.hpp  IPv6AddressParser.cpp  IPv6AddressParser.hpp  IPv6AddressParser_def.hpp  RFC3986AuthorityAst.hpp  RFC3986AuthorityAstAdapted.hpp  RFC3986AuthorityParser.cpp  RFC3986AuthorityParser.hpp  RFC3986AuthorityParser_def.hpp  RFC3986GenDelimsParser.cpp  RFC3986GenDelimsParser.hpp  RFC3986GenDelimsParser_def.hpp  RFC3986HierPartAst.hpp  RFC3986HierPartAstAdapted.hpp  RFC3986HierPartParser.cpp  RFC3986HierPartParser.hpp  RFC3986HierPartParser_def.hpp  RFC3986HostAst.hpp  RFC3986HostParser.cpp  RFC3986HostParser.hpp  RFC3986HostParser_def.hpp  RFC3986IPLiteralAst.hpp  RFC3986IPLiteralParser.cpp  RFC3986IPLiteralParser.hpp  RFC3986IPLiteralParser_def.hpp  RFC3986IPv4AddressGenerator.cpp  RFC3986IPv4AddressGenerator.hpp  RFC3986IPv4AddressGenerator_def.hpp  RFC3986IPv4AddressParser.cpp  RFC3986IPv4AddressParser.hpp  RFC3986IPv4AddressParser_def.hpp  RFC3986IPv6AddressGenerator.cpp  RFC3986IPv6AddressGenerator.hpp  RFC3986IPv6AddressGenerator_def.hpp  RFC3986IPv6AddressParser.cpp  RFC3986IPv6AddressParser.hpp  RFC3986IPv6AddressParser_def.hpp  (+64 more)
uri/test/: CMakeLists.txt  URIUnitTest.cpp
(+28 files in other folders)
